fix переход на русский язык в описании плагина и README

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
+= Бронирование переговорных (модуль Redmine)
+
+В панели администратора вводится перечень переговорных комнат, а в режиме пользователя их уже можно бронировать на определенное время. Удалять и править бронь может только автор брони. Отображаются только актуальные брони.
+
 = Redmine meeting rooms
 
 Redmine plugin for reserve meeting rooms.
